[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resource/Font.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/credits.gd" type="Script" id=2]
[ext_resource path="res://SFX/changeSwitch.wav" type="AudioStream" id=3]
[ext_resource path="res://SFX/clickChoose.wav" type="AudioStream" id=4]

[node name="credits" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = 24.0
margin_right = -192.0
margin_bottom = -24.0
theme = ExtResource( 1 )
text = "Music - EggSamdwich
This Credit - Xinx Flenler
"

[node name="Main Menu" type="Button" parent="."]
margin_left = 40.0
margin_top = 496.0
margin_right = 131.0
margin_bottom = 552.0
size_flags_vertical = 10
theme = ExtResource( 1 )
text = "Back"
align = 0

[node name="changeSwitch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="clickChoose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="mouse_entered" from="Main Menu" to="." method="_on_Main_Menu_mouse_entered"]
[connection signal="pressed" from="Main Menu" to="." method="_on_Main_Menu_pressed"]
